# AI-news-headline-wishperer

./: .env  README.md  app.py  article_scrapper.py  email_sender.py  find_summary.py  main.py  notebook.ipynb  pyproject.toml  summary_generator.py
